--- a/section5/newapp/views/404.hbs
+++ b/section5/newapp/views/404.hbs
@@ -12,7 +12,7 @@
         <nav class="main-header__nav">
             <ul class="main-header__item-list">
                 <li class="main-header__item">
-                    <a class="active" href="/">Shop</a>
+                    <a href="/">Shop</a>
                 </li class="main-header__item">
                 <li class="main-header__item">
                     <a href="/add-product">Add Product</a>
