--- a/section5/newapp/views/layouts/main-layout.hbs
+++ b/section5/newapp/views/layouts/main-layout.hbs
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Not Found</title>
+    <title>{{ pageTitle}}</title>
     <link rel="stylesheet" href="css/main.css">
+    
 </head>
 <body>
     <header class="main-header">
         <nav class="main-header__nav">
             <ul class="main-header__item-list">
                 <li class="main-header__item">
-                    <a href="/">Shop</a>
+                    <a class="{{#if activeShop}}active{{/if}}" href="/">Shop</a>
                 </li class="main-header__item">
                 <li class="main-header__item">
-                    <a href="/add-product">Add Product</a>
+                    <a class="{{#if activeAddProduct}}active{{/if}}" href="/add-product">Add Product</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <main>
-    <h1>Page Not Found</h1> 
-    </main>
+    
+        {{{ body}}}
+    
 </body>
 </html>
