--- a/section5/newapp/views/shop.ejs
+++ b/section5/newapp/views/shop.ejs
@@ -1,10 +1,14 @@
+<%- include('includes/head.ejs') %>
+</head>
+<body>
+    <%- include('includes/nav.ejs') %>
     <main>
-        {{#if hasProducts }}
+        <% if(prods.length > 0){ %>
         <div class="grid">
-            {{#each prods}}
+            <% for(let product of prods){ %>
             <article class="card product-item">
                 <header class="card__header">
-                    <h1 class="product__title">{{this.title}}</h1>
+                    <h1 class="product__title"><%= product.title %>></h1>
                 </header>
                 <div class="card__image">
                     <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.jT0HQ_Nw1IS7F6-RwhWx4wHaHa%26pid%3DApi&f=1" alt="A Book" width="300px">
@@ -17,9 +21,10 @@
                     <button class="btn">Add to Cart</button>
                 </div>
             </article>
-            {{/each}}
+            <% } %>
         </div>
-        {{ else}}
+        <% } else { %>
         <h1>No Products Found</h1>
-        {{/if}}
+        <% } %>
     </main>
+    <%- include('includes/end.ejs') %>
