--- a/section5/newapp/public/css/main.css
+++ b/section5/newapp/public/css/main.css
@@ -94,6 +94,10 @@ button{
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   }
   
+  .card__header{
+      width: 100%;
+  }
+
   .card__header,
   .card__content {
     padding: 1rem;
