--- a/w3prepare/views/admin/add-product.ejs
+++ b/w3prepare/views/admin/add-product.ejs
@@ -12,7 +12,18 @@
                 <label for="title">Title</label>
                 <input type="text" name="title" id="title">
             </div>
-
+            <div class="form-control">
+                <label for="imgURL">Image URL</label>
+                <input type="text" name="imgURL" id="imgURL">
+            </div>
+            <div class="form-control">
+                <label for="price">Price</label>
+                <input type="number" step="0.01" name="price" id="price">
+            </div>
+            <div class="form-control">
+                <label for="desc">Description</label>
+                <textarea name="desc" id="desc" rows="5"></textarea>
+            </div>
             <button class="btn" type="submit">Add Product</button>
         </form>
     </main>
