--- a/w3prepare/views/admin/add-product.ejs
+++ b/w3prepare/views/admin/add-product.ejs
@@ -13,17 +13,18 @@
                 <input type="text" name="title" id="title">
             </div>
             <div class="form-control">
-                <label for="imgURL">Image URL</label>
-                <input type="text" name="imgURL" id="imgURL">
+                <label for="imageUrl">Image URL</label>
+                <input type="text" name="imageUrl" id="imageUrl">
             </div>
             <div class="form-control">
                 <label for="price">Price</label>
-                <input type="number" step="0.01" name="price" id="price">
+                <input type="number" name="price" id="price" step="0.01">
             </div>
             <div class="form-control">
-                <label for="desc">Description</label>
-                <textarea name="desc" id="desc" rows="5"></textarea>
+                <label for="description">Description</label>
+                <textarea name="description" id="description" rows="5"></textarea>
             </div>
+
             <button class="btn" type="submit">Add Product</button>
         </form>
     </main>
