--- a/w3prepare/views/shop/cart.ejs
+++ b/w3prepare/views/shop/cart.ejs
@@ -3,4 +3,22 @@
 
     <body>
         <%- include('../includes/navigation.ejs') %>
+
+        <main>
+           <% if(products.length > 0){ %>
+            <ul>
+                <% products.forEach(p => { %> 
+                   <li> 
+                       <p><%= p.productData.title %> ( <%= p.qty %> )</li></p>
+                       <form action="/cart-delete-item" method="post">
+                            <input type="hidden" value="<%= p.productData.id %>" name="productId">
+                            <button type="submit" class="btn">Delete</button>
+                        </form>
+
+                <% }) %> 
+            </ul>
+            <% } else { %>
+                <h1>No Products in Cart</h1>
+            <% } %> 
+        </main>
         <%- include('../includes/end.ejs') %>
